--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,3 +1,6 @@
+@import './../node_modules/bootstrap/scss/bootstrap';
+
 body {
-  background-color: yellow;
+  color: $primary;
+  background-color: $secondary;
 }
