--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,3 +1,10 @@
 body {
   background-color: yellow;
 }
+
+.example {
+  display: grid;
+  transition: all .5s;
+  user-select: none;
+  background: linear-gradient(to bottom, white, black);
+}
