--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,3 +1,9 @@
+$fa-font-path: "./../node_modules/@fortawesome/fontawesome-free/webfonts";
+@import "./../node_modules/@fortawesome/fontawesome-free/scss/fontawesome";
+@import "./../node_modules/@fortawesome/fontawesome-free/scss/fa-brands";
+@import "./../node_modules/@fortawesome/fontawesome-free/scss/fa-regular";
+@import "./../node_modules/@fortawesome/fontawesome-free/scss/fa-solid";
+
 body {
   background-color: yellow;
 }
